[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/plot_detail_panel.gd" id="1"]

[node name="PlotDetailPanel" type="PanelContainer"]
script = ExtResource("1")
custom_minimum_size = Vector2(280, 0)
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -140.0
offset_right = 140.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LblTitle" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Plot #0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="LblArchetype" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Archetype: —"

[node name="LblSize" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Size: —"

[node name="LblTotal" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Total Resources: —"

[node name="ResourceList" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="BtnClaim" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Claim Plot"

[node name="BtnClose" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Close"
